LU-185 LBUG: (cl_page.c:1362:cl_page_completion()) ...

!(pg->cp_flags & CPF_READ_COMPLETED) ASSERTION(0) failed

The root cause of this issue is that the application is doing regular and
direct IO on the same time. This will cause a ra page is issued for read
again.

Change-Id: I11bb46d334db52fa3faf3922b70ac831391a8217
Signed-off-by: Jinshan Xiong <jay@whamcloud.com>
Reviewed-on: http://review.whamcloud.com/404
Tested-by: Hudson
Reviewed-by: wangdi <di.wang@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>